CV mode is working

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,11 @@
                     <span class="dot"></span>
                 </div>
             </div>
+            <!-- New CV upload section -->
+            <div id="cv-upload" style="display: none;">
+                <input type="file" id="cv-file" accept=".pdf,.doc,.docx,.txt">
+                <button id="upload-cv">Upload CV</button>
+            </div>
         </div>
     </div>
     <script src="/static/script.js"></script>
