--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ChatterCareer - Interview Assistant</title>
+    <title>InterviewAIde - Interview Assistant</title>
     <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <div class="sidebar">
-            <h2>ChatterCareer</h2>
+            <h2>InterviewAIde</h2>
             <ul>
                 <li class="active" data-mode="chat">Chat Interview</li>
                 <li data-mode="cv">CV-based Interview</li>
