--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
         <div class="sidebar">
             <h2>InterviewAIde</h2>
             <ul>
-                <li class="active" data-mode="chat">Chat Interview</li>
+                <li class="active" data-mode="chat">Chat Mode</li>
                 <li data-mode="cv">CV-based Interview</li>
-                <li data-mode="practice">Practice Mode</li>
+                <li data-mode="practice">Verbal Mode</li>
                 <li data-mode="about">About</li>
                 <li data-mode="contact">Contact</li>
             </ul>
